[project]
name = "erddci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "diffusers>=0.33.1",
    "ftfy>=6.3.1",
    "opencv-python>=4.11.0.86",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.6",
    "jupyterlab>=4.4.0",
    "notebook>=7.4.0",
]
